--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -25,10 +25,18 @@
                         <URL value="@Extensions.css" />
                     </stylesheets>
                     <padding>
-                        <Insets bottom="5" left="15" right="5" top="5" />
+                        <Insets bottom="5" left="5" right="5" top="5" />
                     </padding>
                     <children>
                         <BorderPane prefHeight="30" prefWidth="100">
+                            <left>
+                                <VBox>
+                                    <padding>
+                                        <Insets bottom="5" left="0" right="5" top="5" />
+                                    </padding>
+                                    <ImageView fx:id="taskIcon" fitHeight="32.0"  fitWidth="32.0"></ImageView>
+                                </VBox>
+                            </left>
                             <center>
                                  <VBox>
                                      <padding>
@@ -53,7 +61,7 @@
                                           <Insets bottom="5" left="5" right="5" top="10" />
                                       </padding>
                                       <children>
-                                          <ImageView  fx:id="imageView" fitHeight="18.0"  fitWidth="18.0" preserveRatio="true">
+                                          <ImageView  fx:id="statusIcon" fitHeight="18.0"  fitWidth="18.0" preserveRatio="true">
                                           </ImageView>
                                       </children>
                                   </VBox>
