--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -192,7 +192,7 @@
  */
 .button {
     -fx-padding: 5 22 5 22;
-    -fx-background-radius: 7;
+    -fx-background-radius: 7 7 0 0;
     -fx-background-color: #1d1d1d;
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
@@ -201,21 +201,28 @@
 }
 
 .button:hover {
+	
     -fx-background-color: white;
+    -fx-padding: 5 22 5 22;
     -fx-text-fill: #1d1d1d;
+    -fx-border-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:pressed, .button:default:hover:pressed {
-  -fx-background-color: white;
-  -fx-text-fill: #1d1d1d;
+    -fx-background-color: white;
+    -fx-text-fill: #1d1d1d;
+    -fx-font-size: 11pt;
+    -fx-border-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:focused {
-    -fx-border-color: white, white;
-    -fx-border-width: 1, 1;
-    -fx-border-style: solid, segments(1, 1);
-    -fx-border-radius: 0, 0;
-    -fx-border-insets: 1 1 1 1, 0;
+	-fx-padding: 5 22 5 22;
+	-fx-background-color: white;
+	-fx-text-fill: #1d1d1d;
+    -fx-background-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:disabled, .button:default:disabled {
@@ -227,7 +234,7 @@
 .button:default {
     -fx-background-color: -fx-focus-color;
     -fx-text-fill: #ffffff;
-     -fx-background-radius: 30;
+    -fx-background-radius: 7 7 0 0;
 }
 
 .button:default:hover {
