--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -21,7 +21,7 @@
             <children>
                 <VBox alignment="CENTER_LEFT" minHeight="105.0" GridPane.columnIndex="0">
                     <stylesheets>
-                        <URL value="@DarkTheme.css" />
+                        <URL value="@BlueTheme.css" />
                         <URL value="@Extensions.css" />
                     </stylesheets>
                     <padding>
