--- a/src/main/resources/view/BrowserPanel.fxml
+++ b/src/main/resources/view/BrowserPanel.fxml
@@ -11,14 +11,19 @@
 
 <AnchorPane fx:id="display" id="taskselectiondisplay"  xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <VBox fx:id="taskDetails" prefHeight="50.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml" VBox.vgrow = "ALWAYS">
+        <stylesheets>
+                        <URL value="@BlueTheme.css" />
+                        <URL value="@Extensions.css" />
+                    </stylesheets>
          <padding>
              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
           </padding>
+          
     <children>
     <Label id="textForTaskDetails" text ="Task Details" VBox.vgrow="ALWAYS"></Label>
     <Label fx:id="nameLabel"></Label>
     <Label fx:id="tagsheader"></Label>
-    <FlowPane fx:id="tagsFlow"></FlowPane>
+    <FlowPane fx:id="tags"></FlowPane>
     <Label fx:id="startLabel"></Label>
     <Label fx:id="endLabel"></Label>
      </children>
