--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -36,24 +36,24 @@
        </AnchorPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="personList" minWidth="570" prefWidth="570">
+            <VBox fx:id="personList" minWidth="540" prefWidth="540">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </padding>
                <children>
                <HBox>
                <children>
-               <Button fx:id="incompleteButton" onAction="#handleIncompleteButton" text="Incomplete"/>
-               <Button fx:id="completedButton"  onAction="#handleCompletedButton" text="Complete"/>
+               <Button fx:id="incompleteButton" onAction="#handleIncompleteButton" text="Incomplete"/> 
                <Button fx:id="upcomingButton"  onAction="#handleUpcomingButton" text="Upcoming"/>
                <Button fx:id="overdueButton"  onAction="#handleOverdueButton" text="Overdue"/>
+               <Button fx:id="completedButton"  onAction="#handleCompletedButton" text="Complete"/>
                <Button fx:id="allButton"  onAction="#handleAllButton" text="All"/>
                </children>
                </HBox>
                   <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                </children>
             </VBox>
-            <AnchorPane fx:id="browserPlaceholder" styleClass="anchor-pane-with-border" prefWidth="250" >
+            <AnchorPane fx:id="taskDetailsPlaceholder" styleClass="anchor-pane-with-border" prefWidth="250" >
                 <padding>
                     <Insets top="10" bottom="10" left="10" right="10"/>
                 </padding>
