--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -46,7 +46,7 @@
                <Button fx:id="incompleteButton" onAction="#handleIncompleteButton" text="Incomplete"/>
                <Button fx:id="upcomingButton"  onAction="#handleUpcomingButton" text="Upcoming"/>
                <Button fx:id="overdueButton"  onAction="#handleOverdueButton" text="Overdue"/>
-               <Button fx:id="completedButton"  onAction="#handleCompletedButton" text="Complete"/>
+               <Button fx:id="completeButton"  onAction="#handleCompletedButton" text="Complete"/>
                <Button fx:id="allButton"  onAction="#handleAllButton" text="All"/>
                </children>
                </HBox>
