fix complete bug

--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -1,7 +1,9 @@
 
 .error {
-    -fx-background-color: red;
+    -fx-background-color: red,linear-gradient(to bottom, derive(red,60%) 5%,derive(red,90%) 40%);
+
 }
+
 
 
 .tag-selector {
