--- a/src/main/resources/view/BlueTheme.css
+++ b/src/main/resources/view/BlueTheme.css
@@ -1,5 +1,5 @@
 .background {
-    -fx-background-color: derive(#383a68, 20%);
+    -fx-background-color: derive(#3A4B87, 20%);
 }
 
 .label {
@@ -39,9 +39,9 @@
 }
 
 .table-view {
-    -fx-base: #383a68;
-    -fx-control-inner-background: #383a68;
-    -fx-background-color: #383a68;
+    -fx-base: #3A4B87;
+    -fx-control-inner-background: #3A4B87;
+    -fx-background-color: #3A4B87;
     -fx-table-cell-border-color: transparent;
     -fx-table-header-border-color: transparent;
     -fx-padding: 5;
@@ -76,14 +76,14 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-border-color: transparent #383a68 transparent #383a68;
-    -fx-background-color: transparent, derive(#383a68, 10%);
+    -fx-border-color: transparent #3A4B87 transparent #3A4B87;
+    -fx-background-color: transparent, derive(#3A4B87, 10%);
 }
 
 .split-pane {
     -fx-border-radius: 1;
     -fx-border-width: 1;
-    -fx-background-color: derive(#383a68, 20%);
+    -fx-background-color: derive(#3A4B87, 20%);
 }
 
 .list-cell {
@@ -107,12 +107,13 @@
 }
 
 .anchor-pane {
-     -fx-background-color: derive(#383a68, 20%);
+     -fx-background-color: derive(#3A4B87, 20%);
 }
 
 .anchor-pane-with-border {
-     -fx-background-color: derive(#383a68, 20%);
-     -fx-border-color: derive(#383a68, 10%);
+     -fx-background-color: derive(#3A4B87, 20%);
+     -fx-border-color: derive(#3A4B87, 10%);
+     -fx-border-width: 5px;
      -fx-border-top-width: 1px;
 }
 
@@ -126,7 +127,7 @@
 }
 
 .status-bar {
-    -fx-background-color: derive(#383a68, 20%);
+    -fx-background-color: derive(#3A4B87, 20%);
     -fx-text-fill: black;
 }
 
@@ -143,8 +144,8 @@
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#383a68, 30%);
-    -fx-border-color: derive(#383a68, 25%);
+    -fx-background-color: derive(#3A4B87, 30%);
+    -fx-border-color: derive(#3A4B87, 25%);
     -fx-border-width: 1px;
 }
 
@@ -153,17 +154,17 @@
 }
 
 .grid-pane {
-    -fx-background-color: derive(#383a68, 30%);
-    -fx-border-color: derive(#383a68, 30%);
+    -fx-background-color: derive(#3A4B87, 30%);
+    -fx-border-color: derive(#3A4B87, 30%);
     -fx-border-width: 1px;
 }
 
 .grid-pane .anchor-pane {
-    -fx-background-color: derive(#383a68, 30%);
+    -fx-background-color: derive(#3A4B87, 30%);
 }
 
 .context-menu {
-    -fx-background-color: derive(#383a68, 50%);
+    -fx-background-color: derive(#3A4B87, 50%);
 }
 
 .context-menu .label {
@@ -171,7 +172,7 @@
 }
 
 .menu-bar {
-    -fx-background-color: derive(#383a68, 20%);
+    -fx-background-color: derive(#3A4B87, 20%);
 }
 
 .menu-bar .label {
@@ -193,7 +194,7 @@
 .button {
     -fx-padding: 5 22 5 22;
     -fx-background-radius: 7 7 0 0;
-    -fx-background-color: #383a68;
+    -fx-background-color: #001975;
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
@@ -203,14 +204,14 @@
 .button:hover {
     -fx-background-color: white;
     -fx-padding: 5 22 5 22;
-    -fx-text-fill: #383a68;
+    -fx-text-fill: #3A4B87;
     -fx-border-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:pressed, .button:default:hover:pressed {
     -fx-background-color: white;
-    -fx-text-fill: #383a68;
+    -fx-text-fill: #3A4B87;
     -fx-font-size: 11pt;
     -fx-border-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
@@ -219,14 +220,14 @@
 .button:focused {
 	-fx-padding: 5 22 5 22;
 	-fx-background-color: white;
-	-fx-text-fill: #383a68;
+	-fx-text-fill: #3A4B87;
     -fx-background-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:disabled, .button:default:disabled {
     -fx-opacity: 0.4;
-    -fx-background-color: #383a68;
+    -fx-background-color: #3A4B87;
     -fx-text-fill: white;
 }
 
@@ -237,15 +238,15 @@
 }
 
 .button:default:hover {
-    -fx-background-color: derive(-fx-focus-color, 30%);
+    -fx-background-color: derive(-fx-focus-color);
 }
 
 .dialog-pane {
-    -fx-background-color: #383a68;
+    -fx-background-color: #3A4B87;
 }
 
 .dialog-pane > *.button-bar > *.container {
-    -fx-background-color: #383a68;
+    -fx-background-color: #3A4B87;
 }
 
 .dialog-pane > *.label.content {
@@ -255,7 +256,7 @@
 }
 
 .dialog-pane:header *.header-panel {
-    -fx-background-color: derive(#383a68, 25%);
+    -fx-background-color: derive(#3A4B87, 25%);
 }
 
 .dialog-pane:header *.header-panel *.label {
@@ -266,7 +267,7 @@
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#383a68, 50%);
+    -fx-background-color: derive(#3A4B87, 50%);
     -fx-background-insets: 3;
 }
 
@@ -297,6 +298,7 @@
     -fx-font-size: 11px;
     -fx-text-fill: #F70D1A;
 }
+
 
 #filterField, #taskListPanel, #personWebpage {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
