--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -48,8 +48,8 @@
                                              <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
                                          </HBox>
                                          <FlowPane fx:id="tags" />
-                                         <Label fx:id="startTime" styleClass="cell_small_label" text="\$StartTime:" />
-                                         <Label fx:id="endTime" styleClass="cell_small_label" text="\$EndTime:" />
+                                         <Label fx:id="startTime" styleClass="cell_small_label"/>
+                                         <Label fx:id="endTime" styleClass="cell_small_label"/>
                                       </children>
                                   </VBox>
                              </center>
