--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -44,15 +44,16 @@
                                          <Insets bottom="5" left="5" right="5" top="5" />
                                      </padding>
                                      <children>
-                                         <HBox>
-                                             <Label fx:id="id" styleClass="cell_big_label"></Label>
+                                         <!-- @@author A0139633B -->
+                                         <!-- Allow long task titles to be wrapped -->
+                                         <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" >
                                              <Label fx:id="id" styleClass="cell_big_label">
                                                 <minWidth>
                                              <!-- Ensures that the label text is never truncated -->
                                                     <Region fx:constant="USE_PREF_SIZE" />
                                                 </minWidth>
                                              </Label>
-                                             <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
+                                             <Label fx:id="name" text="\$first" styleClass="cell_big_label" prefWidth="400.0" wrapText="true" />
                                          </HBox>
                                          <FlowPane fx:id="tags" />
                                          <Label fx:id="startTime" styleClass="cell_small_label" text="\$StartTime:" />
