--- a/src/main/resources/view/TaskDetailsPanel.fxml
+++ b/src/main/resources/view/TaskDetailsPanel.fxml
@@ -10,7 +10,7 @@
 
 
 <AnchorPane fx:id="display" id="taskselectiondisplay"  xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox fx:id="taskDetails" prefHeight="50.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml" VBox.vgrow = "ALWAYS">
+    <VBox fx:id="taskDetails" prefHeight="50.0" minWidth="200.0" xmlns:fx="http://javafx.com/fxml" VBox.vgrow = "ALWAYS">
         <stylesheets>
             <URL value="@BlueTheme.css" />
             <URL value="@Extensions.css" />
@@ -20,7 +20,21 @@
         </padding>
         <children>
             <Label id="textForTaskDetails" text="Task Details" VBox.vgrow="ALWAYS"></Label>
-            <Label fx:id="nameLabel" prefWidth="300.0" wrapText="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"></Label>
+           
+            
+            <HBox>
+            
+            <children>
+            <HBox fx:id="status">
+             <padding>
+            <Insets right = "5"/>
+            </padding>
+            </HBox>
+                <Label fx:id="nameLabel" styleClass="cell_big_label" prefWidth="300.0" wrapText="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"></Label>
+              </children>
+              </HBox>
+              
+          
             <Label fx:id="tagsheader"></Label>
             <FlowPane fx:id="tags"></FlowPane>
             <Label fx:id="startLabel"></Label>
