--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!-- @@A0144240W -->
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -10,33 +11,19 @@
       <URL value="@Extensions.css" />
    </stylesheets>
    <children>
-      <MenuBar VBox.vgrow="NEVER">
-         <menus>
-            <Menu mnemonicParsing="false" text="File">
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                  <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-               </items>
-            </Menu>
-         </menus>
-      </MenuBar>
       <AnchorPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="anchor-pane-with-border">
          <padding>
-            <Insets top="5.0" bottom="5.0" left="10.0" right="10.0"/>
+            <Insets top="7.0" bottom="3.0" left="10.0" right="10.0"/>
          </padding>
       </AnchorPane>
        <AnchorPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="anchor-pane-with-border" minHeight="100" prefHeight="100" maxHeight="100">
            <padding>
-               <Insets top="5.0" bottom="5.0" left="10.0" right="10.0"/>
+               <Insets top="3.0" bottom="3.0" left="10.0" right="10.0"/>
            </padding>
        </AnchorPane>
-      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
+      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.5" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="personList" minWidth="540" prefWidth="540">
+            <VBox fx:id="taskList" id="#tasklist" minWidth="580" prefWidth="580">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </padding>
@@ -50,10 +37,10 @@
                <Button fx:id="allButton"  onAction="#handleAllButton" text="All"/>
                </children>
                </HBox>
-                  <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                  <AnchorPane fx:id="taskListPanelPlaceholder" styleClass="anchor-pane" VBox.vgrow="ALWAYS"/>
                </children>
             </VBox>
-            <AnchorPane fx:id="taskDetailsPlaceholder" styleClass="anchor-pane-with-border" prefWidth="250" >
+            <AnchorPane fx:id="taskDetailsPlaceholder" styleClass="anchor-pane-with-border" minWidth= "250" prefWidth="250" >
                 <padding>
                     <Insets top="10" bottom="10" left="10" right="10"/>
                 </padding>
