--- a/src/main/resources/view/BlueTheme.css
+++ b/src/main/resources/view/BlueTheme.css
@@ -7,9 +7,9 @@
 
 .label {
     -fx-font-size: 11pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans";
     -fx-text-fill: #555555;
-    -fx-opacity: 0.9;
+    -fx-opacity: 1.0;
 }
 
 .label-bright {
@@ -21,14 +21,14 @@
 
 .label-header {
     -fx-font-size: 32pt;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans";
 }
 
 .tab-pane {
@@ -112,17 +112,19 @@
 }
 
 .cell_big_label {
-    -fx-font-size: 16px;
+    -fx-font-size: 18px;
     -fx-text-fill: white;
+    -fx-font-weight: bold;
 }
 
 .cell_bigger_label {
 	-fx-font-size: 20px;
     -fx-text-fill: white;
+    -fx-font-weight: bold;
 }
 
 .cell_small_label {
-    -fx-font-size: 11px;
+    -fx-font-size: 14px;
     -fx-text-fill: white;
 }
 
@@ -143,7 +145,7 @@
 
 #textForTaskDetails {
 	-fx-font-weight: bold;
-    -fx-font-size:20 em;
+    -fx-font-size: 22px;
     -fx-text-fill: #eeeeee;
 }
 
@@ -155,6 +157,7 @@
 .result-display .content {
     -fx-background-color: #112236;
     -fx-text-fill: white;
+    -fx-font-family: "Gill Sans";
 }
 .result-display {
     -fx-text-fill: white;
@@ -165,17 +168,17 @@
 }
 
 .status-bar .label {
-    -fx-text-fill: white;
+    -fx-text-fill: #436280;
 }
 
 .status-bar-with-border {
     -fx-background-color: derive(#a3bad2, 30%);
     -fx-border-color: derive(#a3bad2, 25%);
-    -fx-border-width: 1px;
+    -fx-border-width: 0.5px;
 }
 
 .status-bar-with-border .label {
-    -fx-text-fill: white;
+    -fx-text-fill:  #436280;
 }
 
 .command-box {
@@ -227,12 +230,12 @@
     -fx-background-color: #436280;
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
-    -fx-text-fill: #d8d8d8;
+    -fx-text-fill: #a3bad2;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
 
 .button:hover {
-    -fx-background-color: white;
+    -fx-background-color: #112236;
     -fx-padding: 5 22 5 22;
     -fx-text-fill: #a3bad2;
     -fx-border-radius: 7 7 0 0;
@@ -241,7 +244,7 @@
 
 .button:pressed, .button:default:hover:pressed {
     -fx-background-color: #112236;
-    -fx-text-fill: white;
+    -fx-text-fill: #a3bad2;
     -fx-font-size: 11pt;
     -fx-border-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
@@ -250,7 +253,7 @@
 .button:focused {
 	-fx-padding: 5 22 5 22;
 	-fx-background-color: #112236;
-	-fx-text-fill: white;
+	-fx-text-fill: #a3bad2;
     -fx-background-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
@@ -293,12 +296,17 @@
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#a3bad2, 50%);
+    -fx-background-color: #112236;
+    -fx-background-insets: 3;
+}
+
+.scroll-bar .track {
+    -fx-background-color: #a3bad2;
     -fx-background-insets: 3;
 }
 
 .scroll-bar .increment-button, .scroll-bar .decrement-button {
-    -fx-background-color: transparent;
+    -fx-background-color: #112236;
     -fx-padding: 0 0 0 0;
 }
 
@@ -320,8 +328,6 @@
     -fx-border-width: 1 1 1 1;
 }
 
-
-
 .list-cell {
 	-fx-background-color: #112236;
 	-fx-font-color: white;
@@ -339,17 +345,17 @@
 }
 
 #tags .label {
-    -fx-text-fill: white;
-    -fx-background-color: #383838;
+    -fx-text-fill: #112236;
+    -fx-background-color:  #a3bad2;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
-    -fx-font-size: 11;
+    -fx-font-size: 11pt;
 }
 
 .selected {
     -fx-background-color: #112236;
-    -fx-text-fill: white;
+    -fx-text-fill: #a3bad2;
     -fx-font-size: 11pt;
     -fx-border-radius: 7 7 0 0;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
